--- a/Posttest3/index.html
+++ b/Posttest3/index.html
@@ -13,7 +13,7 @@
         }
 
         .dark-mode{
-            background-color: tomato;
+            background-color: dimgray;
         }
     </style>
     <nav>
