--- a/Posttest4/index.html
+++ b/Posttest4/index.html
@@ -30,15 +30,15 @@
     <div class="wrapper">
       <section id="Home">
         <div class="gambar">
-          <img src="/Resource/burger.png" alt="gambar" />
+          <img src="./Resource/burger.png" alt="gambar" />
           <h2>Chicken Burger</h2>
         </div>
         <div class="gambar2">
-          <img src="/Resource/pizza.jpg" alt="gambar" />
+          <img src="./Resource/pizza.jpg" alt="gambar" />
           <h2>Cheese Pizza</h2>
         </div>
         <div class="gambar3">
-          <img src="/Resource/ayam.jpg" alt="gambar" />
+          <img src="./Resource/ayam.jpg" alt="gambar" />
           <h2>Fried Chicken</h2>
         </div>
       </section>
