--- a/Posttest4/aboutme.html
+++ b/Posttest4/aboutme.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
     <div class="gambar">
-        <img src="./resource/About me.jpg" alt="ini gambar">
+        <img src="./Resource/About me.jpg" alt="ini gambar">
         <h1>about me</h1>
         <p>
             Nama: Rifki Nurhidayat<br>
